# pixel_loop

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/trivial_cli_demo/: Cargo.toml  README.md
examples/trivial_cli_demo/src/: main.rs
examples/trivial_pixels_demo/: Cargo.toml  README.md
examples/trivial_pixels_demo/src/: main.rs
examples/trivial_winit_demo/: Cargo.toml  README.md
examples/trivial_winit_demo/src/: main.rs
src/: main.rs  pixel_loop.rs
src/fireworks/: README.md  main.rs
src/pixel_loop/: color.rs  crossterm_canvas.rs  lib.rs  tao.rs  winit.rs
src/pixel_loop/canvas/: crossterm.rs  in_memory.rs  mod.rs  pixels.rs
src/pixel_loop/input/: crossterm.rs  mod.rs  noop.rs  pixels.rs
src/pixel_sand/: README.md  main.rs
src/shell_smash/: README.md  main.rs
src/tetromino_cli/: README.md  main.rs  tetromino.rs
src/tetromino_time/: README.md  character_animations.rs  main.rs  number_animations.rs  tetromino.rs
src/tetromino_time/assets/: tetromino_block.afdesign
src/trivial_cli_demo/: README.md  main.rs
