[package]
name = "pixel_loop"
authors = ["Jakob Westhoff <jakob@westhoffswelt.de>"]
version = "0.1.0"
edition = "2021"

[lib]
name = "pixel_loop"
path = "src/pixel_loop/lib.rs"

[[bin]]
name = "tetromino_time"
path = "src/tetromino_time/main.rs"

[[bin]]
name = "pixel_sand"
path = "src/pixel_sand/main.rs"

[[bin]]
name = "trivial_cli_demo"
path = "src/trivial_cli_demo/main.rs"

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
crossterm = "0.28.1"
pixels = "0.13.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
stb_image = "0.3.0"
winit = "0.28.0"
winit_input_helper = "0.14.0"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
