[package]
name = "pixel_loop"
authors = ["Jakob Westhoff <jakob@westhoffswelt.de>"]
version = "0.3.0"
edition = "2021"
description = "A pixel based drawing engine based on the idea of a self stabilizing update loop."
license = "MIT"
repository = "https://github.com/jakobwesthoff/pixel_loop"
documentation = "https://docs.rs/pixel_loop"

[lib]
name = "pixel_loop"
path = "src/pixel_loop/lib.rs"

[dependencies]
anyhow = "1.0.92"
crossterm = { version = "0.28.1", optional = true }
pixels = { version = "0.13.0", optional = true }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
stb_image = { version = "0.3.0", optional = true }
winit = { version = "0.28.0", optional = true }
winit_input_helper = { version = "0.14.0", optional = true }

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[features]
# For now everything is enabled by default. We might change this in future
# versions, once the API becomes more stable.
default = ["crossterm", "pixels", "stb-image"]

# Enable console rendering capabilities via the "CrosstermCanvas"
crossterm = ["dep:crossterm"]

# Enable Window handling and rendering capabilities, via winit and pixels
pixels = ["dep:winit", "dep:winit_input_helper", "dep:pixels"]

# Allow loading of images via stb-image and InMemoryCanvas
stb-image = ["dep:stb_image"]
